hphp/hack/test/typecheck/construct/missing_init4.php.exp
File "missing_init4.php", line 13, characters 19-29:
Class B does not initialize all of its members; A_Test is not always initialized.
Make sure you systematically set $this->A_Test when the method __construct is called.
Alternatively, you can define the member as nullable (?...)
 (NastCheck[3015])
